--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   "homepage": "https://github.com/BKotja/MP-2021-NODEJS-API#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
-    "mongoose": "^5.12.7",
+    "mongoose": "^5.12.10",
+    "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
