--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "homepage": "https://github.com/BKotja/MP-2021-NODEJS-API#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcrypt-nodejs": "0.0.3",
     "connect-mongo": "^4.4.1",
     "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
