--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "connect-mongo": "^4.4.1",
     "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
