--- a/front/package.json
+++ b/front/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "bootstrap": "4.6.0",
+    "cookie": "^0.4.1",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-bootstrap": "^1.6.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1"
   }
 }
