--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-bootstrap": "^1.6.0",
+    "react-bootstrap-icons": "^1.5.0",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.1"
   }
