--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "4.6.0",
     "cookie": "^0.4.1",
+    "jwt-decode": "^3.1.2",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-bootstrap": "^1.6.0",
