--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "cookie": "^0.4.1",
     "jwt-decode": "^3.1.2",
     "next": "^10.0.0",
+    "rc-pagination": "^3.1.6",
     "react": "17.0.1",
     "react-bootstrap": "^1.6.0",
     "react-bootstrap-icons": "^1.5.0",
